# Hermes-Beta

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
examples/basic_metal/: BUILD.bazel  add_arrays.metal  main.swift
examples/hello_world/: sample_library.swift
examples/test/: sample_library_tests.swift
src/: BUILD.bazel  HermesMainApp.swift  print_hello.cpp  print_hello.h
src/test/: BUILD.bazel
