load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application")

ios_application(
    name = "HermesiOSApp",
    bundle_id = "build.bazel.Hermes-Beta",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["resources/info.plist"],
    minimum_os_version = "17.0",
    visibility = ["//visibility:public"],
    deps = ["//src:hermes_app_lib"],
)

macos_application(
    name = "HermesMacOSApp",
    bundle_id = "build.bazel.Hermes-Beta",
    families = ["mac"],
    infoplists = ["resources/info.plist"],
    minimum_os_version = "13.0",
    visibility = ["//visibility:public"],
    deps = ["//src:hermes_app_lib"],
)
